test/domains/sungeun/sparse/index_not_in_domain_2.good
{1152921504606846975 2305843009213693951 4611686018427387903 9223372036854775807}
{1152921504606846975 4611686018427387903 9223372036854775807}
{1152921504606846975 4611686018427387903}
{4611686018427387903}
{}
index_not_in_domain_2.chpl:24: error: halt reached - index not in domain: 0
